@@ -1,0 +1,5 @@
+Var1,Var2
+2.7,A
+3.14,B
+10,A
+-7,A
