@@ -1,0 +1,44 @@
+TABLE
+0,1
+"EXCEL"
+VECTORS
+0,5
+""
+TUPLES
+0,2
+""
+DATA
+0,0
+""
+-1,0
+BOT
+1,0
+"Var1"
+1,0
+"Var2"
+-1,0
+BOT
+0,2.7
+V
+1,0
+"A"
+-1,0
+BOT
+0,3.14
+V
+1,0
+"B"
+-1,0
+BOT
+0,10
+V
+1,0
+"A"
+-1,0
+BOT
+0,-7
+V
+1,0
+"A"
+-1,0
+EOD
